[tool.poetry]
name = "dpop"
version = "0.1.0"
description = ""
authors = ["Huland Gerik <gerik.huland@mercedes-benz.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
authlib = "^1.2.1"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
